test_translator/tests/data/checkpoint_2/errors/03_missing_decimal_entrypoint/tests.py
from decimal import Decimal

assert get_decimal() == Decimal("1.5")
